# gitsecure

./: LICENSE  README.md  pyproject.toml
gitsecure/: github_utils.py  main.py
